--- a/Assignment1fx/src/screens/register.fxml
+++ b/Assignment1fx/src/screens/register.fxml
@@ -19,5 +19,6 @@
       <Button layoutX="364.0" layoutY="239.0" mnemonicParsing="false" text="Submit" />
       <PasswordField layoutX="306.0" layoutY="174.0" prefHeight="25.0" prefWidth="189.0" promptText="Password" />
       <PasswordField layoutX="306.0" layoutY="207.0" prefHeight="25.0" prefWidth="189.0" promptText="Repeat password" />
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backtologin" text="Back to login" />
     </children>
 </AnchorPane>
