--- a/Assignment1fx/src/screens/AccountManagement.fxml
+++ b/Assignment1fx/src/screens/AccountManagement.fxml
@@ -1,27 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.collections.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.collections.FXCollections?>
 
 <AnchorPane id="AnchorPane" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="screens.AccountManagementController">
     <children>
         <Label fx:id="label" alignment="CENTER" layoutX="283.0" layoutY="14.0" minHeight="16" minWidth="69" prefHeight="37.0" prefWidth="235.0" text="Account Management" textAlignment="CENTER">
-         </Label>
-      <Label layoutX="45.0" layoutY="43.0" prefHeight="17.0" prefWidth="41.0" text="Funds:" />
-      <Label fx:id="Funds" layoutX="86.0" layoutY="43.0" />
-      <Label layoutX="45.0" layoutY="70.0" text="Iban:" />
-      <Label fx:id="iban" layoutX="72.0" layoutY="70.0" prefHeight="17.0" prefWidth="0.0" />
-      <Button fx:id="AddFunds" layoutX="392.0" layoutY="126.0" mnemonicParsing="false" text="add funds" />
-      <Label layoutX="312.0" layoutY="62.0" text="Add funds to your account" />
-      <ChoiceBox fx:id="SubsciptionAmount" layoutX="312.0" layoutY="200.0" prefWidth="150.0" />
-      <Button fx:id="addsubscription" layoutX="357.0" layoutY="242.0" mnemonicParsing="false" text="add subscription" />
-      <Label layoutX="312.0" layoutY="183.0" text="Buy more subscription" />
-      <Label layoutX="46.0" layoutY="100.0" text="Character slots:" />
-      <Label fx:id="CharacterSlots" layoutX="133.0" layoutY="104.0" />
-      <Button fx:id="BuyCharacterSlot" layoutX="45.0" layoutY="139.0" mnemonicParsing="false" text="Buy  a character slot $ 1" />
-      <TextField fx:id="FundsAmount" layoutX="309.0" layoutY="92.0" promptText="enter amount" />
+         <font>
+            <Font name="Calibri" size="24.0" />
+         </font></Label>
+      <Label layoutX="30.0" layoutY="105.0" prefHeight="25.0" prefWidth="49.0" text="Funds:">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <Label fx:id="Funds" layoutX="88.0" layoutY="109.0" prefHeight="17.0" prefWidth="133.0" text="123" />
+      <Label layoutX="30.0" layoutY="128.0" text="Iban:">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <Label fx:id="iban" layoutX="68.0" layoutY="132.0" prefHeight="17.0" prefWidth="139.0" text="NL88ABNA1234567844" />
+      <Button fx:id="AddFunds" layoutX="607.0" layoutY="140.0" mnemonicParsing="false" onAction="#addFunds" text="add funds" />
+      <Label layoutX="547.0" layoutY="84.0" text="Add funds to your account">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <ChoiceBox fx:id="SubsciptionAmount" layoutX="319.0" layoutY="110.0" prefWidth="150.0">
+          <items>
+              <FXCollections fx:factory="observableArrayList">
+                  <String fx:value="1 month" />
+                  <String fx:value="2 months" />
+                  <String fx:value="3 months" />
+                  <String fx:value="1 year" />
+              </FXCollections>
+          </items>
+      </ChoiceBox>
+      <Button fx:id="addsubscription" layoutX="342.0" layoutY="140.0" mnemonicParsing="false" onAction="#addSub" text="add subscription" />
+      <Label layoutX="325.0" layoutY="84.0" text="Extend subscription">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <Label layoutX="29.0" layoutY="153.0" text="Character slots:">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <Label fx:id="CharacterSlots" layoutX="142.0" layoutY="157.0" prefHeight="17.0" prefWidth="25.0" />
+      <Button fx:id="BuyCharacterSlot" layoutX="165.0" layoutY="153.0" mnemonicParsing="false" onAction="#addSlots" text="+" />
+      <TextField fx:id="FundsAmount" layoutX="568.0" layoutY="110.0" promptText="enter amount" />
+      <Label layoutX="29.0" layoutY="84.0" text="Months left:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label fx:id="monthsLeft" layoutX="123.0" layoutY="88.0" prefHeight="17.0" prefWidth="35.0" />
+      <Button layoutX="633.0" layoutY="39.0" mnemonicParsing="false" onAction="#GoToCharacterManagement" text="Character Management" />
     </children>
 </AnchorPane>
